# home_oop

./: README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: app_logger.py  category.py  config.py  mixins.py  myexception.py  order.py  product.py  utils.py
tests/: conftest.py  test_app_logger.py  test_category.py  test_order.py  test_product.py  test_utils.py
